[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tableau/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://Tableau/Tableau.gd" type="Script" id=2]
[ext_resource path="res://Tableau/Area2DIsaac.gd" type="Script" id=3]
[ext_resource path="res://Tableau/Area2DQuote.gd" type="Script" id=4]
[ext_resource path="res://Tableau/Area2DJeff.gd" type="Script" id=5]
[ext_resource path="res://Tableau/pin.png" type="Texture" id=6]
[ext_resource path="res://Tableau/isaac success.jpg" type="Texture" id=7]
[ext_resource path="res://Tableau/quote.png" type="Texture" id=8]
[ext_resource path="res://Tableau/post-it.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.5, 114.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 30 )

[node name="Tableau" type="Node2D"]
script = ExtResource( 2 )

[node name="SpriteTableau" type="Sprite" parent="."]
position = Vector2( 255.75, 163.25 )
scale = Vector2( 5.085, 6.55 )
texture = ExtResource( 1 )

[node name="Area2DIsaac" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DIsaac"]
position = Vector2( 478, 54 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2DIsaac"]
position = Vector2( 478, 54 )
scale = Vector2( 0.128686, 0.148148 )
texture = ExtResource( 7 )

[node name="Area2DQuote" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DQuote"]
position = Vector2( 104.5, 162.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2DQuote"]
position = Vector2( 104.5, 162.5 )
scale = Vector2( 0.294922, 0.763333 )
texture = ExtResource( 8 )

[node name="Area2DJeff" type="Area2D" parent="."]
position = Vector2( -40, 24 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DJeff"]
position = Vector2( 462, 162 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Area2DJeff"]
position = Vector2( 458.75, 162 )
scale = Vector2( 0.585, 0.6 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 479, 23 )
scale = Vector2( 0.08, 0.0800001 )
texture = ExtResource( 6 )

[connection signal="clickIsaac" from="Area2DIsaac" to="." method="_on_Area2DIsaac_clickIsaac"]
[connection signal="input_event" from="Area2DIsaac" to="Area2DIsaac" method="_on_Area2DIsaac_input_event"]
[connection signal="clickQuote" from="Area2DQuote" to="." method="_on_Area2DQuote_clickQuote"]
[connection signal="input_event" from="Area2DQuote" to="Area2DQuote" method="_on_Area2DQuote_input_event"]
[connection signal="clickJeff" from="Area2DJeff" to="." method="_on_Area2DJeff_clickJeff"]
[connection signal="input_event" from="Area2DJeff" to="Area2DJeff" method="_on_Area2DJeff_input_event"]
